fixed the alignment of the social media buttons in footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -186,7 +186,7 @@ footer .social-links a {
   margin: 0 20px;
   color: var(--branding-color);
   background-color: var(--secondary-color);
-  padding: 10px 15px;
+  padding: 10px 16px;
   font-size: 20px;
   text-decoration: none;
   border-radius: 50%;
